            - Also renamed the tags from  "IsCustomBlock"  and  "CustomBlock"  to  "IsCustomItem"  and  "CustomItem"
            - New NBT format is:  "WoZItem: { IsCustomBlock:[boolean], CustomItem: [item id] }"
        - Changed test command from  /bb  to  /woztest  (should not be used without knowing exactly what this command does)

    Bug Fixes:
        - Fixed a bug where custom block IDs wouldn't be properly removed after deleting their definition and reloading the plugin
        - Fixed a bug where the custom block  "demo-block"  would throw errors because of an incompatible  "sync-state"
        - Small bugfixes and improvements
        - Known bug: sometimes custom blocks with active  "sync-states"  will cause an error about  "sync_states"  and  "disguised-data"  when being moved by a piston, even though the block appears to be disguised correctly


1.1.2     7/26/21
    - Overhauled command syntax - all commands are now:  /woz [command] [args]
        - For example,  /wozreload  is now  /woz reload  , and  /wozdatabase delete [world]  is now  /woz database delete [world]
        - Information about this plugin can be found by running  /woz info  or just  /woz
    - Commands that are run incorrectly or produce an error now send better formatted and more detailed error messages
    - Moved block un-logging from BlockBreakEvent and BlockChange packet handler into BlockDropItemEvent handler (no effect on functionality)
    - Overhauled custom block logging system - custom blocks are now defined in separate files and logged using their IDs
        - All data for custom block types is stored in files in the new  CustomItems  folder
            - File names in this folder can be arbitrary, and there can be any number of custom blocks in each file
            - Sub-folders with definition files in the  CustomItems  folder are allowed
        - Removed functionality for the  "keep-mojang-prefix"  config option