@@ -23,18 +23,9 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-            <!--  - Added Maven Shade Plugin to include Apache Commons utility imports directly into the compiled jar
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                        <configuration>
-                            <artifactSet>
-                                <includes>
-                                    <include>org.apache.commons:commons-lang3</include>
-                                </includes>
-                            </artifactSet>
-                        </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -43,7 +34,10 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+                <configuration>
+                    <finalName>${artifactId}-${version}</finalName>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -54,19 +48,19 @@
     </build>
 
     <repositories>
-        <repository>
+        <repository> <!-- Purpur API -->
             <id>purpur</id>
             <url>https://repo.pl3x.net/</url>
         </repository>
-        <repository>
+        <repository> <!-- ProtocolLib -->
             <id>dmulloy2-repo</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
-        <repository>
+        <repository> <!-- LibsDisguises -->
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
-        <repository>
+        <repository> <!-- NBT API -->
             <id>codemc-repo</id>
             <url>https://repo.codemc.org/repository/maven-public/</url>
             <layout>default</layout>
@@ -78,41 +72,47 @@
     </repositories>
 
     <dependencies>
-        <dependency>
+        <dependency> <!-- compiler plugin -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <dependency> <!-- Purpur API -->
             <groupId>net.pl3x.purpur</groupId>
             <artifactId>purpur-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <dependency> <!-- ProtocolLib -->
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>4.6.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <dependency> <!-- LibsDisguises -->
             <groupId>com.github.libraryaddict</groupId>
             <artifactId>LibsDisguises</artifactId>
             <version>10.0.20</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <dependency> <!-- NBT API -->
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.8.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <dependency> <!-- Apache Commons Utils -->
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency> <!-- NMS (mainly for investigating things) -->
             <groupId>org.spigotmc</groupId>
@@ -126,7 +126,6 @@
             <version>4.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
 </project>
